<resources>
    <string name="app_name">FAST TAP BATTLE</string>
    <string name="start_value">0</string>
    <string name="start_time">0</string>
    <string name="time">TIME</string>
    <string name="total">TOTAL</string>
    <string name="player_1">PLAYER 1</string>
    <string name="player_2">PLAYER 2</string>
    <string name="player_3">PLAYER 3</string>
    <string name="winner">WIN</string>
    <string name="loser">LOSE</string>
    <string name="draw">DRAW</string>
    <string name="history">HISTORY</string>
    <string name="new_game">NEW GAME</string>
    <string name="about">ABOUT</string>
    <string name="choose_mode">CHOOSE MODE</string>
    <string name="mode_2_player">2 Player</string>
    <string name="mode_3_player">3 PLAYER</string>
    <string name="mode_4_player">4 PLAYER</string>
    <string name="start_game">START GAME</string>
    <string name="hint">Hint\t:</string>
    <string name="hint_2_player_time">Hint\t: 2 Player, Win the game in 10 Seconds</string>
    <string name="hint_2_player_50">Hint\t: 2 Player, Win the game with Tap 50 Target</string>
    <string name="hint_3_player_time">Hint\t: 3 Player, Win the game in 10 Seconds</string>
    <string name="hint_3_player_50">Hint\t: 3 Player, Win the game with Tap 50 Target</string>
    <string name="hint_4_player_time">Hint\t: 4 Player, Win the game in 10 Seconds</string>
    <string name="hint_4_player_50">Hint\t: 4 Player, Win the game with Tap 50 Target</string>
    <string name="version_app">Version 1.0</string>
    <string name="close">CLOSE</string>
    <string name="title_activity_mode2">Mode2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="player_4">PLAYER 4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">NO DATA</string>
</resources>