<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.dashboard.DashboardActivity">

    <ImageView
        android:id="@+id/bg_back_dash"
        android:layout_width="900dp"
        android:layout_height="900dp"
        android:layout_gravity="center"
        android:src="@drawable/bg_dash" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingVertical="200dp">

        <!--Logo-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/logo_ftb"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_app"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_foreground" />

            <TextView
                android:id="@+id/tv_app"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_extrabolditalic"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_app"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_new_game"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_light"
            android:text="@string/new_game"
            android:textColor="@color/black"
            app:icon="@drawable/ic_target_32"
            app:iconPadding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_ftb" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_history"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_light"
            android:text="@string/history"
            android:textColor="@color/black"
            app:icon="@drawable/ic_history_24"
            app:iconPadding="10dp"
            app:layout_constraintStart_toStartOf="@id/btn_new_game"
            app:layout_constraintTop_toBottomOf="@id/btn_new_game" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_about"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/opensans_light"
            android:text="@string/about"
            android:textColor="@color/black"
            app:icon="@drawable/ic_info_24"
            app:iconPadding="10dp"
            app:layout_constraintStart_toStartOf="@id/btn_new_game"
            app:layout_constraintTop_toBottomOf="@id/btn_history" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>