<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_mode2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.mode2.Mode2Activity">

    <TextView
        android:id="@+id/tv_result_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:rotation="180"
        android:text="@string/loser"
        android:textSize="60sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_result_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:text="@string/winner"
        android:textSize="60sp"
        android:visibility="invisible" />

    <!--Player 1-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorOnPrimary"
        android:visibility="visible"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/ic_target_32"
        app:tint="@color/player_1" />

    <!--Player 2-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_player2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorOnPrimary"
        android:visibility="visible"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_target_32"
        app:tint="@color/player_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintHorizontal_bias="0.9"/>

    <!--Player 3-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_player3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorOnPrimary"
        android:visibility="visible"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_target_32"
        app:tint="@color/player_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.75"/>


    <!-- Set Game -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_set_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border"
        android:backgroundTint="?attr/colorOnPrimary"
        android:padding="5dp"
        app:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--Time-->
        <LinearLayout
            android:id="@+id/ll_time_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginEnd="20dp"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_game_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/purple_500"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_game_time_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!--PLayer 1-->
        <LinearLayout
            android:id="@+id/ll_player_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ll_time_game"
            app:layout_constraintStart_toEndOf="@id/ll_player_2"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_player_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_1"
                android:textColor="@color/player_1"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_player_1_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_value"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!--PLayer 2-->
        <LinearLayout
            android:id="@+id/ll_player_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ll_player_3"
            app:layout_constraintEnd_toStartOf="@id/ll_player_1"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_player_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_2"
                android:textColor="@color/player_2"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_player_2_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_value"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!--PLayer 3-->
        <LinearLayout
            android:id="@+id/ll_player_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_player_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_3"
                android:textColor="@color/player_3"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_player_3_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_value"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Back to home-->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cl_set_game"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_back_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:rotation="90"
            android:backgroundTint="?attr/colorOnPrimary"
            app:srcCompat="@drawable/ic_back_arrow_24"
            app:fabSize="normal"
            app:tint="?attr/colorPrimary" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!--Reset Game-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_reset_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:rotation="90"
        android:backgroundTint="?attr/colorOnPrimary"
        app:srcCompat="@drawable/ic_reset_arrow_24"
        app:fabSize="normal"
        app:tint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cl_set_game"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>