<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mode1.Mode1Activity">

    <!--Player 1-->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl_player1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/player_1"
        android:paddingBottom="30dp"
        app:layout_constraintBottom_toTopOf="@id/cl_player2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_result_player_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:rotation="180"
            android:text="@string/loser"
            android:textSize="60sp"
            android:visibility="invisible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_baseline_gps_not_fixed_24"
            app:fabSize="normal"
            app:rippleColor="@color/white"
            app:tint="@color/player_1" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!--Player 2-->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl_player2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/player_2"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_player1">

        <TextView
            android:id="@+id/tv_result_player_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:text="@string/winner"
            android:textSize="60sp"
            android:visibility="invisible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_baseline_gps_not_fixed_24"
            app:fabSize="normal"
            app:rippleColor="@color/white"
            app:tint="@color/player_2" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!-- Set Game -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_set_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border"
        android:padding="5dp"
        app:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--PLayer 1-->
        <LinearLayout
            android:id="@+id/ll_player_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_player_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_1"
                android:textColor="@color/player_1"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_player_1_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_value"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!--Time-->
        <LinearLayout
            android:id="@+id/ll_time_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ll_player_1"
            app:layout_constraintStart_toEndOf="@id/ll_player_2"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_game_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="@color/purple_500"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_game_time_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!--PLayer 2-->
        <LinearLayout
            android:id="@+id/ll_player_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:rotation="90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_player_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_2"
                android:textColor="@color/player_2"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_player_2_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_value"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Back to home-->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cl_set_game"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_back_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:rotation="90"
            android:src="@drawable/ic_back_arrow_24"
            app:fabSize="normal"
            app:tint="@color/purple_500" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <!--Reset Game-->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cl_set_game"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_reset_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:rotation="90"
            android:src="@drawable/ic_reset_arrow_24"
            app:fabSize="normal"
            app:tint="@color/purple_500" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>